--- a/web/themes/digitac/scss/03_component/_paragraph-claim.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-claim.scss
@@ -78,6 +78,10 @@
                 width: auto;
                 max-width: inherit;
             }
+
+            &::before {
+                background-image: url('../images/icons/icon-new.svg');
+            }
         }
     }
 
