--- a/web/themes/digitac/scss/03_component/_selectbox.scss
+++ b/web/themes/digitac/scss/03_component/_selectbox.scss
@@ -87,6 +87,8 @@
       width: 100%;
       margin-bottom: rem(8px);
       padding: rem(12px) 0;
+      background: none;
+      border: none;
       font-family: $font-family-base;
       font-style: normal;
       font-weight: 600;
