--- a/web/themes/digitac/scss/digitac-hub.scss
+++ b/web/themes/digitac/scss/digitac-hub.scss
@@ -80,6 +80,7 @@
 @import '05_theme/view-id-cursos';
 @import '05_theme/view-id-soluciones';
 @import '05_theme/view-filters';
+@import '05_theme/view-votingapi-votes';
 
 // page
 @import '05_theme/page/node--type-noticia';
