--- a/web/themes/digitac/templates/content/comment.html.twig
+++ b/web/themes/digitac/templates/content/comment.html.twig
@@ -107,7 +107,8 @@
         COMENTARIO {{comment.id()}}
       </div>
       <div class="comment__date">
-      {{ submitted.getArguments()['@datetime'] }}
+      {{'Hace'|t}} {{ hence }}
+<!--      {{ submitted.getArguments()['@datetime'] }}-->
       </div>
     </div>
 
