--- a/web/themes/digitac/templates/navigation/links--comment.html.twig
+++ b/web/themes/digitac/templates/navigation/links--comment.html.twig
@@ -35,7 +35,7 @@
   <ul{{ attributes }}>
     {%- for item in links -%}
       <li{{ item.attributes }}>
-        <a href="{{ item.link['#url'] }}" {% if item.text_attributes.type=='delete'%} data-bs-toggle="modal" data-bs-target="#exampleModal-{{item.text_attributes.id}}"{% endif %} {% if item.text_attributes.type=='reply'%} id="#reply-button-{{item.text_attributes.id}}"{% endif %}><img src="../themes/digitac/images/{{ item.text }}.svg"></a>
+        <a href="{% if item.text_attributes.type=='reply'%}#reply-button-{{item.text_attributes.id}}{% else %}{{ item.link['#url'] }}{% endif %}" {% if item.text_attributes.type=='delete'%} data-bs-toggle="modal" data-bs-target="#exampleModal-{{item.text_attributes.id}}"{% endif %} {% if item.text_attributes.type=='reply'%} class="reply-button" id="#reply-button-{{item.text_attributes.id}}"{% endif %}><img src="../themes/digitac/images/{{ item.text }}.svg"></a>
       </li>
     {%- endfor -%}
   </ul>
