--- a/web/themes/digitac/templates/navigation/menu--account.html.twig
+++ b/web/themes/digitac/templates/navigation/menu--account.html.twig
@@ -31,7 +31,7 @@
   {% if items %}
 
     {% if menu_level == 0 %}
-      <ul>
+      <ul class="account-list">
     {% else %}
       <ul>
     {% endif %}
