--- a/web/themes/digitac/templates/nodes/node--compania--default.html.twig
+++ b/web/themes/digitac/templates/nodes/node--compania--default.html.twig
@@ -67,10 +67,11 @@
  *
  */
 #}
-
-    <div class="nombre">
-     {{label|render|striptags|trim}}
-    </div>
-    <div class="seccion">
-     {{content.field_compania_seccion.0}}
+    <div class="group">
+        <div class="name">
+        {{label|render|striptags|trim}}
+        </div>
+        <div class="seccion">
+        {{content.field_compania_seccion.0}}
+        </div>
     </div>
