--- a/web/themes/digitac/templates/nodes/node--curso.html.twig
+++ b/web/themes/digitac/templates/nodes/node--curso.html.twig
@@ -110,7 +110,7 @@
 					<clipPath id="clip-path3">
 						<rect x="104" width="384" height="191" rx="95.5" fill="#D9D9D9"/>
 					</clipPath>
-					<image clip-path="url(#clip-path3)" xlink:href="{{content.field_curso_imagen.0}}" alt="Image" class="svg__image">
+					<image x="104" width="384" height="191" preserveAspectRatio="xMidYMid slice" clip-path="url(#clip-path3)" href="{{content.field_curso_imagen.0}}" alt="Image" class="svg__image">
 				</svg>
 
 
@@ -177,7 +177,7 @@
 		      {{content.field_curso_aprenderas.0}}
             </div>
             {% endif %}
-            
+
 
       </div>
 
