--- a/web/themes/digitac/templates/nodes/node--tramite.html.twig
+++ b/web/themes/digitac/templates/nodes/node--tramite.html.twig
@@ -94,7 +94,10 @@
 
                         <div class="tags">
                               {{content.field_solucion_tipo}}
+
+                              <div class="target pay">
                               {{content.field_solucion_gratuidad.0}}
+                              </div>
 				</div>
 
 
@@ -108,7 +111,7 @@
 					<clipPath id="clip-path3">
 						<rect x="104" width="384" height="191" rx="95.5" fill="#D9D9D9"/>
 					</clipPath>
-					<image clip-path="url(#clip-path3)" xlink:href="{{content.field_solucion_imagen.0}}" alt="Image" class="svg__image">
+					<image x="104" width="384" height="191" preserveAspectRatio="xMidYMid slice" clip-path="url(#clip-path3)" href="{{content.field_solucion_imagen.0}}" alt="Image" class="svg__image">
 				</svg>
 
 
