--- a/web/themes/digitac/templates/paragraphs/paragraph--pg-claim.html.twig
+++ b/web/themes/digitac/templates/paragraphs/paragraph--pg-claim.html.twig
@@ -63,7 +63,7 @@
         <div class="subtitle">
           {{ content.field_pg_claim_subtitulo}}
         </div>
-        <a href="{{ content.field_pg_claim_boton_enlace.0}}" class="btn btn--primary">{{ content.field_pg_claim_boton_texto.0}}</a>
+        <a href="{{ content.field_pg_claim_boton_enlace.0}}" class="btn btn--primary btn--primary--icon">{{ content.field_pg_claim_boton_texto.0}}</a>
       </div>
 
       <div class="paragraph-pg-claim__image">
