--- a/web/themes/digitac/templates/views/views-view--cursos--block_1.html.twig
+++ b/web/themes/digitac/templates/views/views-view--cursos--block_1.html.twig
@@ -53,6 +53,6 @@
       </svg>
     </div>
     <span class="training__item-title">{{ viewcat }}</span>
-    <span class="training__item-number">0</span>
+    <span class="training__item-number">0 {{'cursos'|t}}</span>
   {% endif %}
 </div>
