--- a/web/themes/digitac/templates/views/views-view-fields--cursos--block_3.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--cursos--block_3.html.twig
@@ -27,10 +27,10 @@
                <span class="tag">{{ fields.field_curso_tipo.content }}</span>
                {% endif %}
                 {% if fields.field_curso_gratuidad.content|render|striptags|trim %}
-               <span class="tag">{{ fields.field_curso_gratuidad.content }}</span>
+               <span class="tag pay">{{ fields.field_curso_gratuidad.content }}</span>
                {% endif %}
                 {% if fields.field_curso_fecha_inicio.content|render|striptags|trim %}
-                <span class="tag gratuidad">{{ fields.field_curso_fecha_inicio.content }}</span>
+                <span class="tag date">{{ fields.field_curso_fecha_inicio.content }}</span>
                 {% endif %}
 
            </div>
@@ -50,7 +50,7 @@
                     {% else %}
                         {% set media_final= 0 %}
                     {% endif %}
-                    
+
                     {% set media_final= media_dec.0 %}
                     {% if media_dec.1 matches '/^[1-9]+/' %}
                         <img src="/themes/digitac/images/icons/icon-star-half.svg" alt=""/>
