--- a/web/themes/digitac/templates/views/views-view-fields--view-retos--block.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--view-retos--block.html.twig
@@ -4,6 +4,7 @@
             {{ fields.field_reto_imagen.content }}
 
             <div class="region">
+                {{ fields.field_reto_estado_1.content }}
                 {{ fields.field_reto_estado.content }}
             </div>
         </div>
