--- a/web/themes/digitac/templates/views/views-view-fields--view-retos--page_2.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--view-retos--page_2.html.twig
@@ -21,7 +21,7 @@
                     <clipPath id="clip-path3">
                         <rect x="104" width="384" height="191" rx="95.5" fill="#D9D9D9"/>
                     </clipPath>
-                    <image clip-path="url(#clip-path3)" xlink:href="{{ fields.field_reto_imagen.content|render|striptags|trim }}" alt="Image" class="svg__image">
+                    <image x="104" width="384" height="191" preserveAspectRatio="xMidYMid slice" clip-path="url(#clip-path3)" href="{{ fields.field_reto_imagen.content|render|striptags|trim }}" alt="Image" class="svg__image">
                     </svg>
 
 
