--- a/web/themes/digitac/templates/views/views-view-unformatted--cursos--block_1.html.twig
+++ b/web/themes/digitac/templates/views/views-view-unformatted--cursos--block_1.html.twig
@@ -25,4 +25,4 @@
 </div>
 
 <span class="training__item-title">{{ viewcat }}</span>
-<span class="training__item-number">{{ rows|length }}</span>
+<span class="training__item-number">{{ rows|length }} {{'cursos'|t}}</span>
