--- a/web/themes/digitac/scss/03_component/_modal.scss
+++ b/web/themes/digitac/scss/03_component/_modal.scss
@@ -1,10 +1,13 @@
 .modal {
     $modalParent: ".modal";
+    z-index: 4;
+    transition: all 0.3s ease;
 
     &.show {
         display: flex !important;
         justify-content: center;
         align-items: center;
+        position: fixed;
     }
 
     .modal-dialog {
@@ -120,5 +123,10 @@
                 left: 0;
             }
         }
+    }
+
+
+    &-backdrop {
+        z-index: 3;
     }
 }
