--- a/web/themes/digitac/scss/03_component/_paragraph-cabecera-slider.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-cabecera-slider.scss
@@ -87,7 +87,7 @@
             .btn.btn--head {
                 width: 100%;
                 max-width: 343px;
-                padding: rem(12px) rem(20px);
+                padding: rem(12px) rem(20px) rem(12px) rem(48px);
                 background-color: $white;
                 border-radius: rem(50px);
                 font-family: $font-family-base;
@@ -96,10 +96,24 @@
                 font-size: rem(16px);
                 line-height: rem(24px);
                 color: $black;
+                position: relative;
 
                 @include media(md) {
                     width: auto;
                     max-width: inherit;
+                }
+
+                &::before {
+                    content: '';
+                    width: rem(20px);
+                    height: rem(20px);
+                    background-image: url('../images/icons/icon-rocket.svg');
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                    position: absolute;
+                    top: 50%;
+                    left: rem(20px);
+                    transform: translateY(-50%);
                 }
             }
         }
@@ -122,81 +136,9 @@
         }
 
         @include media(lg) {
+            max-width: calc(1272px - 24px);
             width: auto;
             bottom: rem(-60px);
         }
-
-
-        /* &__item {
-            //width: 25%;
-            margin-bottom: rem(12px);
-            padding: 0 0 rem(12px);
-            text-align: center;
-            position: relative;
-
-            @include media(md) {
-                margin-bottom: 0;
-                padding: 0 rem(24px);
-                text-align: left;
-                border-right: rem(1px) solid $grey-700;
-            }
-
-            @include media(lg) {
-                padding: 0 rem(48px);
-            }
-
-            &::after {
-                content: '';
-                width: rem(112px);
-                height: rem(1px);
-                margin: 0 auto;
-                background: $grey-700;
-                position: absolute;
-                bottom: 0;
-                right: 0;
-                left: 0;
-
-                @include media(md) {
-                    display: none;
-                }
-            }
-
-            &:first-child {
-                padding-left: 0;
-            }
-
-            &:last-child {
-                padding-right: 0;
-                border-right: none;
-
-                &::after {
-                    display: none;
-                }
-            }
-        }
-
-        &__number {
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 400;
-            font-size: rem(36px);
-            line-height: rem(44px);
-            letter-spacing: -0.02em;
-            color: $black;
-
-            @include media(md) {
-                font-size: rem(48px);
-                line-height: rem(60px);
-            }
-        }
-
-        &__text {
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 600;
-            font-size: rem(18px);
-            line-height: rem(28px);
-            color: $primary;
-        } */
     }
 }
