--- a/web/themes/digitac/scss/03_component/_text-formatted.scss
+++ b/web/themes/digitac/scss/03_component/_text-formatted.scss
@@ -1,6 +1,7 @@
 .text-formatted {
     &.field--name-body {
         h2 {
+            margin-top: rem(32px);
             margin-bottom: rem(16px);
             font-family: $font-family-base;
             font-style: normal;
@@ -22,6 +23,7 @@
         h4,
         h5,
         h6 {
+            margin-top: rem(16px);
             font-family: $font-family-base;
             font-style: normal;
             font-weight: 600;
@@ -58,6 +60,13 @@
 
     }
 
+    img {
+        max-width: 100%;
+        width: auto;
+        height: auto;
+        margin: rem(48px) 0;
+    }
+
     table {
         width: 100%;
 
@@ -91,4 +100,5 @@
         }
 
     }
+
 }
