--- a/web/themes/digitac/scss/05_theme/_view-id-soluciones.scss
+++ b/web/themes/digitac/scss/05_theme/_view-id-soluciones.scss
@@ -1,4 +1,4 @@
-.view-id-soluciones {
+/* .view-id-soluciones {
     &.view-display-id-block_2 {
         max-width: rem(1272px);
         margin: rem(32px) auto 0;
@@ -92,6 +92,15 @@
             }
 
             form {
+
+                .fieldgroup {
+                    margin: 0;
+
+                    legend {
+                        display: block;
+                    }
+                }
+
 
                 .form--inline {
                     display: flex;
@@ -206,24 +215,5 @@
             }
         }
     }
-
-    /* &.view-display-id-block_4 {
-        max-width: rem(1272px);
-        margin: 0 auto;
-        padding: 0 rem(12px);
-        display: flex;
-        justify-content: flex-start;
-
-
-        .view-content {
-            width: rem(250px);
-            margin-bottom: rem(32px);
-            margin-right: rem(60px);
-            padding: rem(24px);
-            background-color: $grey-50;
-            border: rem(1px) solid $grey-200;
-            border-radius: rem(8px);
-
-        }
-    } */
 }
+ */
