--- a/web/themes/digitac/templates/views/views-view-fields--soluciones--block_3.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--soluciones--block_3.html.twig
@@ -33,11 +33,11 @@
 
                {% endif %}
                 {% if fields.field_solucion_precio.content|render|striptags|trim !='' %}
-               <span class="tag">{{ fields.field_solucion_gratuidad.content }}</span>
+               <span class="tag pay">{{ fields.field_solucion_gratuidad.content }}</span>
                {% endif %}
            </div>
 
-           
+
 
         </div>
     </div>
